新增支持“数据更新检查”功能（待测试）